# mcunet-extended

./: Dockerfile  README.md  build.sh  helper.py  large.sh  main.ipynb  main.py  mcunet-slurm.py  medium.sh  monitor.py  nas-bdwrconv2d.py  nas-conv2d.py  nas-dwconv2d.py  nas-full.py  oneshot-slurm.py  oneshot.py  pyproject.toml  run.sh  sample-mult.py  sample-slurm.py  single.py  small.sh  subds.py  wd.sh
libtinyengine/Inc/: genNN.h
patches/torchprofile/: atanh.diff
searchspaces/mnasnetplus/: __init__.py  full.py  more.py  simple.py
src/mcunet/shim/: __init__.py  _sub.py  layers.py  runner.py
src/mcunet/tinyengine/: CodeGenerator.py  TfliteConvertor.py
src/mcunet/tinyengine/allocator/: base_allocator.py
src/mcunet/tinynas/: __init__.py  mobilenet.py  pytorch.py  searchspace.py  skeleton.py  utils.py
src/mcunet/tinynas/configurations/mnasnetplus/: __init__.py
src/mcunet/tinynas/configurations/mnasnetplus/share/: full.py  more.py  simple.py
src/mcunet/tinynas/datasets/: __init__.py  common.py  gtsrb.py  imagenet.py
src/mcunet/tinynas/datasets/gtsrb/: __init__.py
src/mcunet/tinynas/instances/: __init__.py  bdwrconv2d.py  conv2d.py  dwconv2d.py  full.py
src/mcunet/tinynas/mnasnet/: README.md  __init__.py  layers.py  model.py  searchspace.py
src/mcunet/tinynas/oneshot/: README.md  __init__.py  customize.py  helper.py  layers.py  layers2.py  share.py
src/mcunet/tinynas/proxylessnas/: README.md  layers.py  model.py  old.py
src/mcunet/tinynas/searchspace/: __init__.py  layers.py  model.py
src/mcunet/tinynas/utils/: __init__.py  torchhelper.py
